feat: install CLI plugin and enable catalog feature in portal container

--- a/.env.example
+++ b/.env.example
@@ -135,6 +135,13 @@ MCP_PORTAL_CLI_MAX_CONCURRENT=10
 MCP_PORTAL_CLI_OUTPUT_BUFFER_SIZE=1048576
 MCP_PORTAL_CLI_ENABLE_DEBUG=false
 
+# Catalog Configuration
+MCP_PORTAL_CATALOG_FEATURE_ENABLED=true
+MCP_PORTAL_CATALOG_BASE_PATH=/app/data/catalogs/base
+MCP_PORTAL_CATALOG_USER_PATH=/app/user-catalogs
+MCP_PORTAL_CATALOG_CACHE_TTL=5m
+MCP_PORTAL_CATALOG_MAX_CUSTOM_SERVERS=50
+
 # Server Configuration
 MCP_PORTAL_SERVER_READ_TIMEOUT=30s
 MCP_PORTAL_SERVER_WRITE_TIMEOUT=30s
