--- a/.env.example
+++ b/.env.example
@@ -55,7 +55,7 @@ NEXT_PUBLIC_WS_URL=ws://localhost:8080
 NEXT_PUBLIC_AZURE_REDIRECT_URI=http://localhost:3000/auth/callback
 NEXT_PUBLIC_AZURE_POST_LOGOUT_URI=http://localhost:3000
 NEXT_PUBLIC_AZURE_AUTHORITY=https://login.microsoftonline.com/${AZURE_TENANT_ID}
-NEXT_PUBLIC_AZURE_SCOPES=openid profile email User.Read
+NEXT_PUBLIC_AZURE_SCOPES="openid profile email User.Read"
 
 # Frontend Development Settings
 NEXT_PUBLIC_DEBUG=false
