feat: separate client and server Azure AD config values in env files

--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,13 @@
 # ========================================
 
 # Azure AD Configuration (REQUIRED - Get from Azure Portal)
+# Server-side values
 AZURE_TENANT_ID=your-tenant-id-here
 AZURE_CLIENT_ID=your-client-id-here
 AZURE_CLIENT_SECRET=your-client-secret-here
+# Client-side values
+NEXT_PUBLIC_AZURE_TENANT_ID=your-tenant-id-here
+NEXT_PUBLIC_AZURE_CLIENT_ID=your-client-id-here
 
 # JWT Secret (REQUIRED - Must be same for frontend & backend!)
 # Generate with: openssl rand -base64 64
@@ -54,7 +58,7 @@ NEXT_PUBLIC_WS_URL=ws://localhost:8080
 # Azure AD Public Configuration
 NEXT_PUBLIC_AZURE_REDIRECT_URI=http://localhost:3000/auth/callback
 NEXT_PUBLIC_AZURE_POST_LOGOUT_URI=http://localhost:3000
-NEXT_PUBLIC_AZURE_AUTHORITY=https://login.microsoftonline.com/${AZURE_TENANT_ID}
+NEXT_PUBLIC_AZURE_AUTHORITY=https://login.microsoftonline.com/your-tenant-id-here
 NEXT_PUBLIC_AZURE_SCOPES="openid profile email User.Read"
 
 # Frontend Development Settings
@@ -86,20 +90,20 @@ NEXT_PUBLIC_STATUS_REFRESH_INTERVAL=10
 # ========================================
 
 # Backend needs these with MCP_PORTAL_ prefix (auto-mapped from above)
-MCP_PORTAL_AZURE_TENANT_ID=${AZURE_TENANT_ID}
-MCP_PORTAL_AZURE_CLIENT_ID=${AZURE_CLIENT_ID}
-MCP_PORTAL_AZURE_CLIENT_SECRET=${AZURE_CLIENT_SECRET}
-MCP_PORTAL_SECURITY_JWT_SIGNING_KEY=${JWT_SECRET}
-MCP_PORTAL_SERVER_PORT=${API_PORT}
+MCP_PORTAL_AZURE_TENANT_ID=your-tenant-id-here
+MCP_PORTAL_AZURE_CLIENT_ID=your-client-id-here
+MCP_PORTAL_AZURE_CLIENT_SECRET=your-client-secret-here
+MCP_PORTAL_SECURITY_JWT_SIGNING_KEY=your-jwt-secret-minimum-32-characters-change-in-production
+MCP_PORTAL_SERVER_PORT=8080
 MCP_PORTAL_SERVER_HOST=0.0.0.0
 
 # Database Configuration
-DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+DATABASE_URL=postgresql://postgres:change-in-production@postgres:5432/mcp_portal
 MCP_PORTAL_DATABASE_HOST=postgres
 MCP_PORTAL_DATABASE_PORT=5432
-MCP_PORTAL_DATABASE_DATABASE=${POSTGRES_DB}
-MCP_PORTAL_DATABASE_USERNAME=${POSTGRES_USER}
-MCP_PORTAL_DATABASE_PASSWORD=${POSTGRES_PASSWORD}
+MCP_PORTAL_DATABASE_DATABASE=mcp_portal
+MCP_PORTAL_DATABASE_USERNAME=postgres
+MCP_PORTAL_DATABASE_PASSWORD=change-in-production
 MCP_PORTAL_DATABASE_SSL_MODE=prefer
 MCP_PORTAL_DATABASE_MAX_CONNECTIONS=20
 MCP_PORTAL_DATABASE_MIN_CONNECTIONS=2
@@ -107,7 +111,7 @@ MCP_PORTAL_DATABASE_MIN_CONNECTIONS=2
 # Redis Configuration
 REDIS_URL=redis://redis:6379
 MCP_PORTAL_REDIS_ADDRS=redis:6379
-MCP_PORTAL_REDIS_PASSWORD=${REDIS_PASSWORD}
+MCP_PORTAL_REDIS_PASSWORD=
 MCP_PORTAL_REDIS_DB=0
 MCP_PORTAL_REDIS_SESSION_TTL=24h
 
