--- a/cmd/docker-mcp/portal/frontend/.env.local.unified.example
+++ b/cmd/docker-mcp/portal/frontend/.env.local.unified.example
@@ -20,15 +20,19 @@
 # Get these from Azure Portal > App Registrations
 
 # Shared values (both services use the same Azure AD app)
+# Server-side values
 AZURE_TENANT_ID=your-tenant-id-here
 AZURE_CLIENT_ID=your-client-id-here
 AZURE_CLIENT_SECRET=your-client-secret-here
+# Client-side values
+NEXT_PUBLIC_AZURE_TENANT_ID=your-tenant-id-here
+NEXT_PUBLIC_AZURE_CLIENT_ID=your-client-id-here
 
 # Backend also needs these with MCP_PORTAL_ prefix
 # (These will be set automatically by the wrapper script)
-MCP_PORTAL_AZURE_TENANT_ID=${AZURE_TENANT_ID}
-MCP_PORTAL_AZURE_CLIENT_ID=${AZURE_CLIENT_ID}
-MCP_PORTAL_AZURE_CLIENT_SECRET=${AZURE_CLIENT_SECRET}
+MCP_PORTAL_AZURE_TENANT_ID=your-tenant-id-here
+MCP_PORTAL_AZURE_CLIENT_ID=your-client-id-here
+MCP_PORTAL_AZURE_CLIENT_SECRET=your-client-secret-here
 
 # ----------------------------------------
 # JWT Security Configuration
@@ -40,7 +44,7 @@ MCP_PORTAL_AZURE_CLIENT_SECRET=${AZURE_CLIENT_SECRET}
 JWT_SECRET=your-jwt-secret-minimum-32-characters-change-in-production
 
 # Backend needs this with different name
-MCP_PORTAL_SECURITY_JWT_SIGNING_KEY=${JWT_SECRET}
+MCP_PORTAL_SECURITY_JWT_SIGNING_KEY=your-jwt-secret-minimum-32-characters-change-in-production
 
 # ----------------------------------------
 # API Port Configuration
@@ -56,9 +60,9 @@ MCP_PORTAL_SERVER_HOST=0.0.0.0
 
 # Frontend constructs URLs from it
 # Backend Go service URL (Portal CLI subcommand)
-NEXT_PUBLIC_API_URL=http://localhost:${API_PORT}
+NEXT_PUBLIC_API_URL=http://localhost:8080
 # WebSocket URL for real-time updates
-NEXT_PUBLIC_WS_URL=ws://localhost:${API_PORT}
+NEXT_PUBLIC_WS_URL=ws://localhost:8080
 
 # ========================================
 # FRONTEND-SPECIFIC CONFIGURATION
@@ -73,9 +77,9 @@ NEXT_PUBLIC_AZURE_REDIRECT_URI=http://localhost:3000/auth/callback
 # Azure AD post-logout redirect URI
 NEXT_PUBLIC_AZURE_POST_LOGOUT_URI=http://localhost:3000
 # Azure AD authority URL (optional - constructed from tenant ID on server if not provided)
-NEXT_PUBLIC_AZURE_AUTHORITY=https://login.microsoftonline.com/${AZURE_TENANT_ID}
+NEXT_PUBLIC_AZURE_AUTHORITY=https://login.microsoftonline.com/your-tenant-id-here
 # Azure AD scopes (space-separated)
-NEXT_PUBLIC_AZURE_SCOPES=openid profile email User.Read
+NEXT_PUBLIC_AZURE_SCOPES="openid profile email User.Read"
 
 # ----------------------------------------
 # Frontend Development Settings
