--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,10 @@ API_PORT=8080
 NODE_ENV=development
 MCP_PORTAL_ENV=development
 
+# MCP Portal Configuration
+# Set to 1 to skip Docker Desktop check
+DOCKER_MCP_SKIP_DESKTOP_CHECK=0
+
 # ========================================
 # INFRASTRUCTURE (PostgreSQL & Redis)
 # ========================================
