--- a/cmd/docker-mcp/portal/frontend/package.json
+++ b/cmd/docker-mcp/portal/frontend/package.json
@@ -80,8 +80,8 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-aria/ssr": "3.9.10",
     "@react-aria/visually-hidden": "3.8.27",
-    "@scalar/api-reference": "1.35.6",
-    "@scalar/nextjs-api-reference": "0.8.19",
+    "@scalar/api-reference": "1.35.7",
+    "@scalar/nextjs-api-reference": "0.8.20",
     "@sentry/nextjs": "^10",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tailwindcss/postcss": "^4.1.13",
@@ -99,9 +99,10 @@
     "embla-carousel-react": "^8.6.0",
     "geist": "^1.5.1",
     "globals": "^16.4.0",
+    "jose": "^6.1.0",
     "lucide-react": "^0.544.0",
     "mini-svg-data-uri": "^1.4.4",
-    "motion": "^12.23.15",
+    "motion": "^12.23.16",
     "next": "15.5.3",
     "next-safe-action": "^8.0.11",
     "next-sitemap": "^4.2.3",
@@ -111,7 +112,7 @@
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
     "react-grid-layout": "^1.5.2",
-    "react-hook-form": "^7.62.0",
+    "react-hook-form": "^7.63.0",
     "react-resizable-panels": "^3.0.6",
     "react-spinners": "^0.17.0",
     "react-use-measure": "^2.1.7",
@@ -133,7 +134,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@eslint/js": "^9.35.0",
+    "@eslint/js": "^9.36.0",
     "@next/bundle-analyzer": "^15.5.3",
     "@react-types/shared": "3.32.0",
     "@tailwindcss/forms": "^0.5.10",
@@ -141,6 +142,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
@@ -153,7 +155,7 @@
     "@vitejs/plugin-react": "^5.0.3",
     "critters": "^0.0.23",
     "dotenv-cli": "^10.0.0",
-    "eslint": "^9.35.0",
+    "eslint": "^9.36.0",
     "eslint-config-next": "15.5.3",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
